@@ -1,5 +1,6 @@
 20121226 - fhabermann
 * added Knowledgeroot_Content_Parser
+* using objects in getContents of Knowledgeroot_Content
 
 20121219 - fhabermann
 * upgraded to jquery 1.8.3
